[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/ui_game_menu_button_base.png" type="Texture" id=1]
[ext_resource path="res://Fonts/dialogue_name.tres" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/dialogue_text.tres" type="DynamicFontData" id=3]
[ext_resource path="res://UI/ui_E_button.png" type="Texture" id=4]
[ext_resource path="res://UI/ui_X_button.png" type="Texture" id=5]
[ext_resource path="res://Fonts/dialogue_skip_button.tres" type="DynamicFontData" id=6]
[ext_resource path="res://UI/ui_space_button.png" type="Texture" id=7]
[ext_resource path="res://UI/DialogueBox.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "Prompt"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Prompt"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Prompt"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -688.0
margin_top = -344.0
margin_right = 696.0
margin_bottom = -64.0
texture = ExtResource( 1 )
region_rect = Rect2( -0.290051, -0.107242, 320.469, 125.463 )
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="DialogueBox"]
margin_left = 32.0
margin_top = 8.0
margin_right = 792.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.862745, 0.862745, 0.862745, 1 )
text = "  NAME:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="DialogueBox"]
margin_left = 40.0
margin_top = 88.0
margin_right = 1100.0
margin_bottom = 240.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.862745, 0.862745, 0.862745, 1 )
text = "Words go here
this is a new line
and a third line"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Sprite" parent="DialogueBox"]
position = Vector2( 1310, 208 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
centered = false
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueBox/Skip"]
anims/Prompt = SubResource( 3 )

[node name="Next" type="Sprite" parent="DialogueBox"]
position = Vector2( 1310, 78 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
centered = false
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueBox/Next"]
anims/Prompt = SubResource( 7 )

[node name="Next2" type="Sprite" parent="DialogueBox"]
position = Vector2( 1212, 132 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
centered = false
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueBox/Next2"]
anims/Prompt = SubResource( 8 )

[node name="Portrait" type="Sprite" parent="DialogueBox"]
position = Vector2( 960, -176 )
scale = Vector2( 6, 6 )

[node name="Timer" type="Timer" parent="DialogueBox"]

[node name="OldMan_voice" type="AudioStreamPlayer" parent="DialogueBox"]
volume_db = -10.0

[node name="Player_voice" type="AudioStreamPlayer" parent="DialogueBox"]
volume_db = -10.0

[node name="Dad_voice" type="AudioStreamPlayer" parent="DialogueBox"]
volume_db = -10.0

[node name="tv_voice" type="AudioStreamPlayer" parent="DialogueBox"]

[node name="SkipLabel" type="RichTextLabel" parent="DialogueBox"]
margin_left = 1204.0
margin_top = 216.0
margin_right = 1404.0
margin_bottom = 266.0
custom_fonts/normal_font = SubResource( 5 )
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLabel" type="RichTextLabel" parent="DialogueBox"]
margin_left = 1202.0
margin_top = 86.0
margin_right = 1402.0
margin_bottom = 136.0
custom_fonts/normal_font = SubResource( 6 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}
